--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,19 @@
 @import "tailwindcss";
+@plugin '@tailwindcss/forms';
 
 :root {
+  --btn-height: 24.345px;
+  --btn-bg: theme(colors.amber.500);
+}
+
+.btn {
+  width: 100%;
+  height: var(--btn-height);
+  background-color: var(--btn-bg);
+}
+
+/* In Tailwind, JIT mode is a feature that generates CSS utility classes on demand in real time. */
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -23,4 +36,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
