--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,14 +6,14 @@
   --btn-bg: theme(colors.amber.500);
 }
 
-.btn {
-  width: 100%;
-  height: var(--btn-height);
-  background-color: var(--btn-bg);
+.primary-btn {
+  @apply w-full bg-orange-500 text-white  font-medium  rounded-md text-center hover:bg-orange-400 transition-colors;
 }
+
 a {
   @apply text-orange-500;
 }
+
 /* In Tailwind, JIT mode is a feature that generates CSS utility classes on demand in real time. */
 /* :root {
   --background: #ffffff;
